--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://vivek:mahesh@cluster0.wasw8ai.mongodb.net/
 PORT=8000
-SECRET_KEY=vivekanandaaa
+SECRET_KEY=vikekanandaaa
+EMAIL_USER=collegeconnect33@gmail.com
+EMAIL_PASS=oaahaprdsdpkfslk
